# HometaskForAKOS

./: .gitignore  README.md
Cat/: CMakeLists.txt  README.md  blackhole.c  catFILE.c  catLowLevel.c
GrepForSharp/: CMakeLists.txt  main.c
StringTask/: CMakeLists.txt  main.c
find/: find.c
ls/: CMakeLists.txt  main.c  vector.c  vector.h
